Add delete ordine to swagger
