# pkg/auth/controllers/post_login.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 	"ordine-api/pkg/auth"
 	"ordine-api/pkg/auth/services"
+	"ordine-api/pkg/utils"
 
 	"github.com/gin-gonic/gin"
 )
@@ -18,14 +19,14 @@ import (
 //	@Produce		json
 //	@Param			user	body		auth.LoginRequestBody	true	"User data"
 //	@Success		200		{object}	auth.LoginUserSuccessResponse
-//	@Failure		400		{object}	auth.AuthFailResponse
-//	@Failure		500		{object}	auth.AuthFailResponse
+//	@Failure		400		{object}	utils.GenericResponse
+//	@Failure		500		{object}	utils.GenericResponse
 //	@Router			/auth/login [post]
 func PostLogin(ctx *gin.Context) {
 	var requestBody auth.LoginRequestBody
 
 	if err := ctx.ShouldBindJSON(&requestBody); err != nil {
-		ctx.JSON(http.StatusBadRequest, auth.AuthFailResponse{Message: fmt.Sprintf("Invalid input: %s", err.Error())})
+		ctx.JSON(http.StatusBadRequest, utils.GenericResponse{Message: fmt.Sprintf("Invalid input: %s", err.Error())})
 		return
 	}
 
@@ -34,7 +35,7 @@ func PostLogin(ctx *gin.Context) {
 		Password: requestBody.Password,
 	})
 	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, auth.AuthFailResponse{
+		ctx.JSON(http.StatusInternalServerError, utils.GenericResponse{
 			Message: fmt.Sprintf("Error trying to generate token: %s", err.Error()),
 		})
 		return
