# pkg/auth/controllers/post_register.go
@@ -18,8 +18,8 @@ import (
 //	@Produce		json
 //	@Param			user	body		auth.LoginRequestBody	true	"User data"
 //	@Success		201		{object}	auth.User
-//	@Failure		400		{object}	auth.AuthFailResponse
-//	@Failure		500		{object}	auth.AuthFailResponse
+//	@Failure		400		{object}	utils.GenericResponse
+//	@Failure		500		{object}	utils.GenericResponse
 //	@Router			/auth/register [post]
 func PostRegister(ctx *gin.Context) {
 	var bodyUser auth.LoginRequestBody
